name:                TalkWithVim
version:             0.1.0.0
homepage:            https://github.com/lesguillemets/bookish-garbanzo
license:             BSD3
license-file:        LICENSE
author:              lesguillemets
maintainer:          kgkacko+github@gmail.com
copyright:           2016 lesguillemets
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable talk
  hs-source-dirs:      talk
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , TalkWithVim
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lesguillemets/talkWithVim
